# pandocster

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  generate.sh  pandocster.py  pyproject.toml
.cursor/rules/: click-architecture.mdc  markdown-specs.mdc  speak-russian.mdc  task-definition.md
.cursor/skills/python-code-quality/: SKILL.md
.cursor/skills/python-project-setup/: SKILL.md
.cursor/skills/python-testing-pytest/: SKILL.md
.cursor/skills/solid-dry-code/: SKILL.md
docs/: config.yml
docs/article/01-big-data/: _index.md
docs/article/01-big-data/01-overview/: 01-big-data-and-ml-overview.md  02-similarities-differences-links.md
docs/article/01-big-data/02-dwh-dl-oltp-olap/: 01-dwh-oltp-olap.md  02-dwh-etl-elt.md  03-dwh-dwh-data-lake.md  04-dwh-data-lakehouse.md  05-dwh-relations.md  _index.md
docs/article/01-big-data/03-lambda-and-kappa/: 01-overview.md  02-lambda.md  03-kappa.md  04-resume.md  _index.md
docs/article/01-big-data/04-technologies/: 01-storage.md  02-ingestion.md  03-processing.md  04-resume.md  _index.md
docs/article/02-ML/: _index.md
docs/article/02-ML/00-deepseek/: 01-ml-arch-overview.md  _index.md
docs/article/02-ML/01-claude/: 01-ml-concepts.md  02-mlops.md  03-dialog-architecture.md  04-rag-architecture.md  05-intent-recognition.md  (+2 more)
docs/diagrams/: _index.md
docs/diagrams/01-mermaid/: 01-fowchart.md  02-class.md  03-sequence.md  04-er.md  06-git.md  _index.md
docs/diagrams/02-graphiz/: 01-git-concepts.md  02-twelve-colorz.md  _index.md
docs/md/01-about/: 02-crosslinks.md  04-index-file.md
docs/pandocster/01-about/: 01-structure.md  02-crosslinks.md  03-images.md  04-index-file.md  _index.md
filters/: header_offset.lua  link_anchors.lua  newpage.lua
src/01-about/: 01-structure.md  02-crosslinks.md  03-images.md  04-index-file.md  _index.md
src/02-under-the-hood/: _index.md
src/02-under-the-hood/01-scripts/: 01-pandocster.md  02-generate.md
src/02-under-the-hood/02-lua-filters/: 01-header-offset.md  02-link-anchors.md  03-newpage.md  _index.md
src/cli/: __init__.py  build.py  check.py  config_cmd.py  entrypoint.py  init_cmd.py  prepare.py
src/config/: __init__.py  load.py  schema.py
src/pandoc-filters/: __init__.py  absorb_nonvisual_paragraphs.lua  header_offset.lua  link_anchors.lua  newpage.lua
src/pandocster/: __init__.py  cli.py  core.py
src/service/: command_log.py  markdown_walker.py  subprocess_runner.py
src/service/commands/: build.py  checks.py  init.py  prepare.py
tests/: __init__.py  conftest.py  test_build.py  test_checks.py  test_cli_check.py  test_cli_commands.py  test_cli_log.py  test_command_log.py  test_config_load.py  test_init.py  test_prepare.py  test_prepare_diagrams.py  test_prepare_images.py  test_prepare_reflinks.py  test_smoke.py
