[project]
name = "pandocster"
version = "2.0.0"
description = "Pandocster: a CLI helper around pandoc workflows."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "mypy>=1.9",
    "pre-commit>=3.0",
    "types-click>=7.1.8",
]

[project.scripts]
pandocster = "cli.entrypoint:main"

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
service = ["pandoc_filters/*.lua"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["pandocster"]
strict_optional = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

